--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -12,15 +12,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - uses: docker/build-push-action@v4
+      - uses: docker/build-push-action@v6
         with:
           context: .
           push: true
+          file: ./server/Dockerfile
           tags: maxrsb/photo-uploader:${{ github.sha }}
           platforms: linux/amd64
 
