--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -29,4 +29,4 @@ COPY --from=builder server/dist dist
 
 COPY package.json package.json
 
-CMD ["node", "dist/index.js"]
+CMD ["node", "dist/index.mjs"]
