--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -26,16 +26,16 @@ jobs:
           tags: maxrsb/photo-uploader:${{ github.sha }}
           platforms: linux/amd64
 
-      #      - name: Setup Terraform CLI
-      #        uses: hashicorp/setup-terraform@v2
-      #
-      #      - name: Write kubeconfig to ~/.kube/config
-      #        run: |
-      #          mkdir ~/.kube
-      #          echo '${{ secrets.KUBE_CONFIG }}' > ~/.kube/config
-      #
-      #      - name: Terraform init, validate, plan and apply
-      #        run: |
-      #          cd terraform
-      #          terraform init
-      #          terraform apply -auto-approve -var="image_tag=${{ github.sha }}"
+      - name: Setup Terraform CLI
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Write kubeconfig to ~/.kube/config
+        run: |
+          mkdir ~/.kube
+          echo '${{ secrets.KUBE_CONFIG }}' > ~/.kube/config
+
+      - name: Terraform init, validate, plan and apply
+        run: |
+          cd terraform
+          terraform init
+          terraform apply -auto-approve -var="image_tag=${{ github.sha }}"
