--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch --env-file .env --import tsx/esm src/index.ts",
-    "build": "node build.js"
+    "build": "rollup -c rollup.config.js"
   },
   "author": "Max Netterberg",
   "license": "ISC",
@@ -18,10 +18,11 @@
     "swiss-log": "^0.1.10"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.9",
-    "esbuild": "^0.23.0",
-    "esbuild-node-externals": "^1.13.1",
+    "rollup": "^4.18.0",
     "tsx": "^4.16.0",
     "typescript": "^5.5.2"
   }
