--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.9",
     "rollup": "^4.18.0",
+    "tslib": "^2.6.3",
     "tsx": "^4.16.0",
     "typescript": "^5.5.2"
   }
